<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ExerciseFireBypassDamperParameters" Id="{0208af9e-44de-4fad-a2d5-ebf40deab400}">
    <Declaration><![CDATA[TYPE ExerciseFireBypassDamperParameters :
STRUCT
	Interval: INT := 48; (* Central exercise interval for all damper modules (set to zero for no exercising) $(unit hour) *)
	StopVentilation: BOOL := TRUE; (* Stop ventilation during central exercise *)
	Hour: INT := 10; (* Central exercise at this hour $(unit hour) *)
	Minute: INT := 30; (* Central exercise at this minute $(unit minute) *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>