<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="ExerciseFireBypassDamperParameters" Id="{cd9de177-1e8e-4f3c-a828-db1036ea21fb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ExerciseFireBypassDamperParameters
VAR_INPUT
	TimeChannel: TimeChannelSettings;
	StartManualExercise: BOOL;
	ExerciseStatus: BOOL;
	CloseFTXDamper: BOOL;
	StopSystem: BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <LineIds Name="ExerciseFireBypassDamperParameters">
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>